# BeamCalc

./: CMakeLists.txt  barProblem.cpp  barProblem.h  beamProblem.cpp  beamProblem.h  calculateAreaMoment.cpp  calculateAreaMoment.h  errorCheck.cpp  errorCheck.h  main.cpp  problem.cpp  problem.h  readme.txt  shaftProblem.cpp  shaftProblem.h
